// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectEnvironments render active renders empty message 1`] = `
<ProjectEnvironments
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  route={
    Object {
      "path": "environments/",
    }
  }
  routes={Array []}
>
  <div>
    <SettingsPageHeading
      tabs={
        <ul
          className="nav nav-tabs"
          style={
            Object {
              "borderBottom": "1px solid #ddd",
            }
          }
        >
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/hidden/"
          >
            Hidden
          </ListLink>
        </ul>
      }
      title="Manage Environments"
    >
      <Wrapper
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
      >
        <div
          className="css-t5gfr9-Wrapper css-1wp86lr0"
        >
          <Flex
            align="center"
          >
            <StyledFlex>
              <div
                className="css-1qt63sy-StyledFlex css-9xhpuv1"
              >
                <Title>
                  <div
                    className="css-zmdcxu-Title css-1wp86lr1"
                  >
                    Manage Environments
                  </div>
                </Title>
              </div>
            </StyledFlex>
          </Flex>
          <div>
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/"
              >
                <li
                  className="active"
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Environments
                    </a>
                  </Link>
                </li>
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/hidden/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Hidden
                    </a>
                  </Link>
                </li>
              </ListLink>
            </ul>
          </div>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <StyledPanel>
        <div
          className="css-17bqt4b-StyledPanel css-5bw71w0"
        >
          <PanelHeader>
            <StyledPanelHeader>
              <Component
                className="css-19pgfgl-StyledPanelHeader css-9rpnl60"
              >
                <Flex
                  align="center"
                  className="css-19pgfgl-StyledPanelHeader css-9rpnl60"
                  justify="space-between"
                >
                  <StyledFlex
                    className="css-19pgfgl-StyledPanelHeader css-9rpnl60"
                  >
                    <div
                      className="css-9rpnl60 css-ievpq9-StyledFlex css-9xhpuv1"
                    >
                      Active Environments
                    </div>
                  </StyledFlex>
                </Flex>
              </Component>
            </StyledPanelHeader>
          </PanelHeader>
          <PanelBody
            direction="column"
            disablePadding={true}
            flex={false}
          >
            <div
              className=""
            >
              <EmptyMessage>
                <Wrapper>
                  <div
                    className="css-bq6a85-Wrapper css-toum0v0"
                  >
                    <div
                      className="ref-message"
                    >
                      You don't have any environments yet.
                    </div>
                  </div>
                </Wrapper>
              </EmptyMessage>
            </div>
          </PanelBody>
        </div>
      </StyledPanel>
    </Panel>
  </div>
</ProjectEnvironments>
`;

exports[`ProjectEnvironments render active renders environment list and sets staging as default env 1`] = `
<ProjectEnvironments
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  route={
    Object {
      "path": "environments/",
    }
  }
  routes={Array []}
>
  <div>
    <SettingsPageHeading
      tabs={
        <ul
          className="nav nav-tabs"
          style={
            Object {
              "borderBottom": "1px solid #ddd",
            }
          }
        >
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/hidden/"
          >
            Hidden
          </ListLink>
        </ul>
      }
      title="Manage Environments"
    >
      <Wrapper
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
      >
        <div
          className="css-t5gfr9-Wrapper css-1wp86lr0"
        >
          <Flex
            align="center"
          >
            <StyledFlex>
              <div
                className="css-1qt63sy-StyledFlex css-9xhpuv1"
              >
                <Title>
                  <div
                    className="css-zmdcxu-Title css-1wp86lr1"
                  >
                    Manage Environments
                  </div>
                </Title>
              </div>
            </StyledFlex>
          </Flex>
          <div>
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/"
              >
                <li
                  className="active"
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Environments
                    </a>
                  </Link>
                </li>
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/hidden/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Hidden
                    </a>
                  </Link>
                </li>
              </ListLink>
            </ul>
          </div>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <StyledPanel>
        <div
          className="css-17bqt4b-StyledPanel css-5bw71w0"
        >
          <PanelHeader>
            <StyledPanelHeader>
              <Component
                className="css-19pgfgl-StyledPanelHeader css-9rpnl60"
              >
                <Flex
                  align="center"
                  className="css-19pgfgl-StyledPanelHeader css-9rpnl60"
                  justify="space-between"
                >
                  <StyledFlex
                    className="css-19pgfgl-StyledPanelHeader css-9rpnl60"
                  >
                    <div
                      className="css-9rpnl60 css-ievpq9-StyledFlex css-9xhpuv1"
                    >
                      Active Environments
                    </div>
                  </StyledFlex>
                </Flex>
              </Component>
            </StyledPanelHeader>
          </PanelHeader>
          <PanelBody
            direction="column"
            disablePadding={true}
            flex={false}
          >
            <div
              className=""
            >
              <EnvironmentRow
                environment={
                  Object {
                    "displayName": "All Environments",
                    "id": "__all_environments__",
                    "name": "__all_environments__",
                  }
                }
                hideName={true}
                isDefault={false}
                name="__all_environments__"
                onSetAsDefault={[Function]}
                shouldShowSetDefault={true}
              >
                <PanelItem
                  align="center"
                  justify="space-between"
                  p={2}
                >
                  <StyledPanelItem
                    align="center"
                    justify="space-between"
                    p={2}
                  >
                    <Flex
                      align="center"
                      className="css-v9wio6-StyledPanelItem css-ggxnv80"
                      justify="space-between"
                      p={2}
                    >
                      <StyledFlex
                        className="css-v9wio6-StyledPanelItem css-ggxnv80"
                      >
                        <div
                          className="css-ggxnv80 css-17kl3dc-StyledFlex css-9xhpuv1"
                        >
                          <Flex
                            align="center"
                          >
                            <StyledFlex>
                              <div
                                className="css-1qt63sy-StyledFlex css-9xhpuv1"
                              >
                                All Environments
                                 
                              </div>
                            </StyledFlex>
                          </Flex>
                          <div>
                            <EnvironmentButton
                              onClick={[Function]}
                              size="xsmall"
                            >
                              <Button
                                className="css-10adnmx-EnvironmentButton css-zyyc9b0"
                                disabled={false}
                                onClick={[Function]}
                                size="xsmall"
                              >
                                <button
                                  className="css-10adnmx-EnvironmentButton css-zyyc9b0 button button-default button-xs"
                                  disabled={false}
                                  onClick={[Function]}
                                  role="button"
                                >
                                  <Flex
                                    align="center"
                                    className="button-label"
                                  >
                                    <StyledFlex
                                      className="button-label"
                                    >
                                      <div
                                        className="button-label css-1qt63sy-StyledFlex css-9xhpuv1"
                                      >
                                        Set as default
                                      </div>
                                    </StyledFlex>
                                  </Flex>
                                </button>
                              </Button>
                            </EnvironmentButton>
                          </div>
                        </div>
                      </StyledFlex>
                    </Flex>
                  </StyledPanelItem>
                </PanelItem>
              </EnvironmentRow>
              <EnvironmentRow
                actionText="Hide"
                environment={
                  Object {
                    "displayName": "Production",
                    "id": "1",
                    "name": "production",
                    "urlRoutingName": "production",
                  }
                }
                isDefault={false}
                isHidden={false}
                key="1"
                name="production"
                onHide={[Function]}
                onSetAsDefault={[Function]}
                shouldShowAction={true}
                shouldShowSetDefault={true}
              >
                <PanelItem
                  align="center"
                  justify="space-between"
                  p={2}
                >
                  <StyledPanelItem
                    align="center"
                    justify="space-between"
                    p={2}
                  >
                    <Flex
                      align="center"
                      className="css-v9wio6-StyledPanelItem css-ggxnv80"
                      justify="space-between"
                      p={2}
                    >
                      <StyledFlex
                        className="css-v9wio6-StyledPanelItem css-ggxnv80"
                      >
                        <div
                          className="css-ggxnv80 css-17kl3dc-StyledFlex css-9xhpuv1"
                        >
                          <Flex
                            align="center"
                          >
                            <StyledFlex>
                              <div
                                className="css-1qt63sy-StyledFlex css-9xhpuv1"
                              >
                                Production
                                 
                                <code>
                                  production
                                </code>
                              </div>
                            </StyledFlex>
                          </Flex>
                          <div>
                            <EnvironmentButton
                              onClick={[Function]}
                              size="xsmall"
                            >
                              <Button
                                className="css-10adnmx-EnvironmentButton css-zyyc9b0"
                                disabled={false}
                                onClick={[Function]}
                                size="xsmall"
                              >
                                <button
                                  className="css-10adnmx-EnvironmentButton css-zyyc9b0 button button-default button-xs"
                                  disabled={false}
                                  onClick={[Function]}
                                  role="button"
                                >
                                  <Flex
                                    align="center"
                                    className="button-label"
                                  >
                                    <StyledFlex
                                      className="button-label"
                                    >
                                      <div
                                        className="button-label css-1qt63sy-StyledFlex css-9xhpuv1"
                                      >
                                        Set as default
                                      </div>
                                    </StyledFlex>
                                  </Flex>
                                </button>
                              </Button>
                            </EnvironmentButton>
                            <EnvironmentButton
                              onClick={[Function]}
                              size="xsmall"
                            >
                              <Button
                                className="css-10adnmx-EnvironmentButton css-zyyc9b0"
                                disabled={false}
                                onClick={[Function]}
                                size="xsmall"
                              >
                                <button
                                  className="css-10adnmx-EnvironmentButton css-zyyc9b0 button button-default button-xs"
                                  disabled={false}
                                  onClick={[Function]}
                                  role="button"
                                >
                                  <Flex
                                    align="center"
                                    className="button-label"
                                  >
                                    <StyledFlex
                                      className="button-label"
                                    >
                                      <div
                                        className="button-label css-1qt63sy-StyledFlex css-9xhpuv1"
                                      >
                                        Hide
                                      </div>
                                    </StyledFlex>
                                  </Flex>
                                </button>
                              </Button>
                            </EnvironmentButton>
                          </div>
                        </div>
                      </StyledFlex>
                    </Flex>
                  </StyledPanelItem>
                </PanelItem>
              </EnvironmentRow>
              <EnvironmentRow
                actionText="Hide"
                environment={
                  Object {
                    "displayName": "Staging",
                    "id": "2",
                    "name": "staging",
                    "urlRoutingName": "staging",
                  }
                }
                isDefault={true}
                isHidden={false}
                key="2"
                name="staging"
                onHide={[Function]}
                onSetAsDefault={[Function]}
                shouldShowAction={true}
                shouldShowSetDefault={false}
              >
                <PanelItem
                  align="center"
                  justify="space-between"
                  p={2}
                >
                  <StyledPanelItem
                    align="center"
                    justify="space-between"
                    p={2}
                  >
                    <Flex
                      align="center"
                      className="css-v9wio6-StyledPanelItem css-ggxnv80"
                      justify="space-between"
                      p={2}
                    >
                      <StyledFlex
                        className="css-v9wio6-StyledPanelItem css-ggxnv80"
                      >
                        <div
                          className="css-ggxnv80 css-17kl3dc-StyledFlex css-9xhpuv1"
                        >
                          <Flex
                            align="center"
                          >
                            <StyledFlex>
                              <div
                                className="css-1qt63sy-StyledFlex css-9xhpuv1"
                              >
                                Staging
                                 
                                <code>
                                  staging
                                </code>
                                <Tag
                                  priority="success"
                                >
                                  <TagTextStyled
                                    priority="success"
                                  >
                                    <span
                                      className="css-giy4xh-TagTextStyled css-3x95g0"
                                    >
                                      Default
                                    </span>
                                  </TagTextStyled>
                                </Tag>
                              </div>
                            </StyledFlex>
                          </Flex>
                          <div>
                            <EnvironmentButton
                              onClick={[Function]}
                              size="xsmall"
                            >
                              <Button
                                className="css-10adnmx-EnvironmentButton css-zyyc9b0"
                                disabled={false}
                                onClick={[Function]}
                                size="xsmall"
                              >
                                <button
                                  className="css-10adnmx-EnvironmentButton css-zyyc9b0 button button-default button-xs"
                                  disabled={false}
                                  onClick={[Function]}
                                  role="button"
                                >
                                  <Flex
                                    align="center"
                                    className="button-label"
                                  >
                                    <StyledFlex
                                      className="button-label"
                                    >
                                      <div
                                        className="button-label css-1qt63sy-StyledFlex css-9xhpuv1"
                                      >
                                        Hide
                                      </div>
                                    </StyledFlex>
                                  </Flex>
                                </button>
                              </Button>
                            </EnvironmentButton>
                          </div>
                        </div>
                      </StyledFlex>
                    </Flex>
                  </StyledPanelItem>
                </PanelItem>
              </EnvironmentRow>
            </div>
          </PanelBody>
        </div>
      </StyledPanel>
    </Panel>
  </div>
</ProjectEnvironments>
`;

exports[`ProjectEnvironments render hidden renders empty message 1`] = `
<ProjectEnvironments
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  route={
    Object {
      "path": "environments/hidden/",
    }
  }
  routes={Array []}
>
  <div>
    <SettingsPageHeading
      tabs={
        <ul
          className="nav nav-tabs"
          style={
            Object {
              "borderBottom": "1px solid #ddd",
            }
          }
        >
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/hidden/"
          >
            Hidden
          </ListLink>
        </ul>
      }
      title="Manage Environments"
    >
      <Wrapper
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
      >
        <div
          className="css-t5gfr9-Wrapper css-1wp86lr0"
        >
          <Flex
            align="center"
          >
            <StyledFlex>
              <div
                className="css-1qt63sy-StyledFlex css-9xhpuv1"
              >
                <Title>
                  <div
                    className="css-zmdcxu-Title css-1wp86lr1"
                  >
                    Manage Environments
                  </div>
                </Title>
              </div>
            </StyledFlex>
          </Flex>
          <div>
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Environments
                    </a>
                  </Link>
                </li>
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                <li
                  className="active"
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/hidden/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Hidden
                    </a>
                  </Link>
                </li>
              </ListLink>
            </ul>
          </div>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <StyledPanel>
        <div
          className="css-17bqt4b-StyledPanel css-5bw71w0"
        >
          <PanelHeader>
            <StyledPanelHeader>
              <Component
                className="css-19pgfgl-StyledPanelHeader css-9rpnl60"
              >
                <Flex
                  align="center"
                  className="css-19pgfgl-StyledPanelHeader css-9rpnl60"
                  justify="space-between"
                >
                  <StyledFlex
                    className="css-19pgfgl-StyledPanelHeader css-9rpnl60"
                  >
                    <div
                      className="css-9rpnl60 css-ievpq9-StyledFlex css-9xhpuv1"
                    >
                      Hidden
                    </div>
                  </StyledFlex>
                </Flex>
              </Component>
            </StyledPanelHeader>
          </PanelHeader>
          <PanelBody
            direction="column"
            disablePadding={true}
            flex={false}
          >
            <div
              className=""
            >
              <EmptyMessage>
                <Wrapper>
                  <div
                    className="css-bq6a85-Wrapper css-toum0v0"
                  >
                    <div
                      className="ref-message"
                    >
                      You don't have any hidden environments.
                    </div>
                  </div>
                </Wrapper>
              </EmptyMessage>
            </div>
          </PanelBody>
        </div>
      </StyledPanel>
    </Panel>
  </div>
</ProjectEnvironments>
`;

exports[`ProjectEnvironments render hidden renders environment list 1`] = `
<ProjectEnvironments
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
  route={
    Object {
      "path": "environments/hidden/",
    }
  }
  routes={Array []}
>
  <div>
    <SettingsPageHeading
      tabs={
        <ul
          className="nav nav-tabs"
          style={
            Object {
              "borderBottom": "1px solid #ddd",
            }
          }
        >
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/"
          >
            Environments
          </ListLink>
          <ListLink
            activeClassName="active"
            index={true}
            isActive={[Function]}
            to="/org-slug/project-slug/settings/environments/hidden/"
          >
            Hidden
          </ListLink>
        </ul>
      }
      title="Manage Environments"
    >
      <Wrapper
        tabs={
          <ul
            className="nav nav-tabs"
            style={
              Object {
                "borderBottom": "1px solid #ddd",
              }
            }
          >
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/"
            >
              Environments
            </ListLink>
            <ListLink
              activeClassName="active"
              index={true}
              isActive={[Function]}
              to="/org-slug/project-slug/settings/environments/hidden/"
            >
              Hidden
            </ListLink>
          </ul>
        }
      >
        <div
          className="css-t5gfr9-Wrapper css-1wp86lr0"
        >
          <Flex
            align="center"
          >
            <StyledFlex>
              <div
                className="css-1qt63sy-StyledFlex css-9xhpuv1"
              >
                <Title>
                  <div
                    className="css-zmdcxu-Title css-1wp86lr1"
                  >
                    Manage Environments
                  </div>
                </Title>
              </div>
            </StyledFlex>
          </Flex>
          <div>
            <ul
              className="nav nav-tabs"
              style={
                Object {
                  "borderBottom": "1px solid #ddd",
                }
              }
            >
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/"
              >
                <li
                  className=""
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Environments
                    </a>
                  </Link>
                </li>
              </ListLink>
              <ListLink
                activeClassName="active"
                index={true}
                isActive={[Function]}
                to="/org-slug/project-slug/settings/environments/hidden/"
              >
                <li
                  className="active"
                >
                  <Link
                    onlyActiveOnIndex={true}
                    style={Object {}}
                    to="/org-slug/project-slug/settings/environments/hidden/"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Hidden
                    </a>
                  </Link>
                </li>
              </ListLink>
            </ul>
          </div>
        </div>
      </Wrapper>
    </SettingsPageHeading>
    <Panel>
      <StyledPanel>
        <div
          className="css-17bqt4b-StyledPanel css-5bw71w0"
        >
          <PanelHeader>
            <StyledPanelHeader>
              <Component
                className="css-19pgfgl-StyledPanelHeader css-9rpnl60"
              >
                <Flex
                  align="center"
                  className="css-19pgfgl-StyledPanelHeader css-9rpnl60"
                  justify="space-between"
                >
                  <StyledFlex
                    className="css-19pgfgl-StyledPanelHeader css-9rpnl60"
                  >
                    <div
                      className="css-9rpnl60 css-ievpq9-StyledFlex css-9xhpuv1"
                    >
                      Hidden
                    </div>
                  </StyledFlex>
                </Flex>
              </Component>
            </StyledPanelHeader>
          </PanelHeader>
          <PanelBody
            direction="column"
            disablePadding={true}
            flex={false}
          >
            <div
              className=""
            >
              <EnvironmentRow
                actionText="Show"
                environment={
                  Object {
                    "displayName": "Zzz",
                    "id": "1",
                    "name": "zzz",
                    "urlRoutingName": "zzz",
                  }
                }
                isDefault={false}
                isHidden={true}
                key="1"
                name="zzz"
                onHide={[Function]}
                onSetAsDefault={[Function]}
                shouldShowAction={true}
                shouldShowSetDefault={false}
              >
                <PanelItem
                  align="center"
                  justify="space-between"
                  p={2}
                >
                  <StyledPanelItem
                    align="center"
                    justify="space-between"
                    p={2}
                  >
                    <Flex
                      align="center"
                      className="css-v9wio6-StyledPanelItem css-ggxnv80"
                      justify="space-between"
                      p={2}
                    >
                      <StyledFlex
                        className="css-v9wio6-StyledPanelItem css-ggxnv80"
                      >
                        <div
                          className="css-ggxnv80 css-17kl3dc-StyledFlex css-9xhpuv1"
                        >
                          <Flex
                            align="center"
                          >
                            <StyledFlex>
                              <div
                                className="css-1qt63sy-StyledFlex css-9xhpuv1"
                              >
                                Zzz
                                 
                                <code>
                                  zzz
                                </code>
                              </div>
                            </StyledFlex>
                          </Flex>
                          <div>
                            <EnvironmentButton
                              onClick={[Function]}
                              size="xsmall"
                            >
                              <Button
                                className="css-10adnmx-EnvironmentButton css-zyyc9b0"
                                disabled={false}
                                onClick={[Function]}
                                size="xsmall"
                              >
                                <button
                                  className="css-10adnmx-EnvironmentButton css-zyyc9b0 button button-default button-xs"
                                  disabled={false}
                                  onClick={[Function]}
                                  role="button"
                                >
                                  <Flex
                                    align="center"
                                    className="button-label"
                                  >
                                    <StyledFlex
                                      className="button-label"
                                    >
                                      <div
                                        className="button-label css-1qt63sy-StyledFlex css-9xhpuv1"
                                      >
                                        Show
                                      </div>
                                    </StyledFlex>
                                  </Flex>
                                </button>
                              </Button>
                            </EnvironmentButton>
                          </div>
                        </div>
                      </StyledFlex>
                    </Flex>
                  </StyledPanelItem>
                </PanelItem>
              </EnvironmentRow>
            </div>
          </PanelBody>
        </div>
      </StyledPanel>
    </Panel>
  </div>
</ProjectEnvironments>
`;
